--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "deploy": "npm run build",
+    "build": "react-scripts build && mv build docs",
+    "deploy": "npm run build && gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -38,5 +38,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://bass-bass.github.io/LTWU/"
+  "homepage": "https://bass-bass.github.io/LTWU/",
+  "devDependencies": {
+    "gh-pages": "^3.2.1"
+  }
 }
